2012-12-11  Hani Benhabiles  <kroosec@gmail.com>

	* src/html/omp.xsl (details-header-icons): Add noedit parameter.
	(port_list [details]): Fix type parameter and use noedit parameter
	for details-header-icons template call.

2012-12-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_many): Get the Wizard Rows setting too.

	* src/html/omp.xsl (list-window): Call wizard-icon and wizard.

	* src/html/wizard.xsl (wizard-icon, wizard): New templates.

2012-12-10  Hani Benhabiles  <kroosec@gmail.com>

	* src/gsad_omp.c (get_port_list): Use get_one function. Rename commands
	parameter to extra_xml for consistency.
	(get_port_lists): New function.
	(get_port_lists_omp): Use get_port_lists function.
	(delete_port_list_omp, delete_trash_port_list_omp)
	(delete_port_range_omp): Use delete_resource adequately.

2012-12-10  Hani Benhabiles  <kroosec@gmail.com>

	* src/html/omp.xsl (port_list [details]): Use details-header-icon and
	minor-details templates.

	* src/gsad_omp.c (export_port_list_omp): Remove trailing whitespace.

2012-12-10  Hani Benhabiles  <kroosec@gmail.com>

	Add Port Lists exporting.

	* src/gsad_omp.c (export_port_lists_omp): New function.
	(export_port_list_omp): Use export_resource.

	* src/gsad_omp.h: Add header accordingly.

	* src/gsad.c (init_validator, exec_omp_get): Add export_port_lists
	command.

2012-12-10  Hani Benhabiles  <kroosec@gmail.com>

	Add New Port List page.

	* src/gsad_omp.c (new_port_list, new_port_list_omp): New functions.

	* src/gsad_omp.h: Add header accordingly.

	* src/gsad.c (init_validator, exec_omp_get): Add new_port command.

	* src/html/omp.xsl (html-create-port_list-table): Rename to
	html-create-port-list-table to follow the same naming style.
	(get_port_lists): Remove port list create and import template calls.
	(new_port_list): New template.

2012-12-10  Hani Benhabiles  <kroosec@gmail.com>

	* src/html/omp.xsl (list-window-line-icons): Add support for noclone and