@@ -1,3 +1,11 @@
+2012-12-11  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_base.c (params_add): Ensure that name and value are always
+	strings.
+
+	* src/html/omp.xsl (details-header-icon): Remove extra ampersand from
+	New link.
+
 2012-12-11  Hani Benhabiles  <kroosec@gmail.com>
 
 	* src/html/omp.xsl (details-header-icons): Add noedit parameter.
